--- a/app/src/main/resources/GUI/principale.fxml
+++ b/app/src/main/resources/GUI/principale.fxml
@@ -6,17 +6,15 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="600.0" spacing="15.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="600.0" spacing="15.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="matibbajava.controller.PrincipaleController">
    <children>
       <HBox alignment="CENTER_LEFT" spacing="27.0">
          <children>
@@ -50,27 +48,16 @@
             </RadioButton>
          </children>
       </HBox>
-      <ScrollPane hbarPolicy="NEVER" vbarPolicy="NEVER">
-         <content>
-            <GridPane fx:id="grigliaDB" prefHeight="143.0" prefWidth="580.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </GridPane>
-         </content>
-      </ScrollPane>
+      <TableView fx:id="grigliaDB" prefHeight="250.0">
+        <columns>
+          <TableColumn fx:id="column1" prefWidth="75.0" text="C1" />
+          <TableColumn fx:id="column2" prefWidth="75.0" text="C2" />
+            <TableColumn fx:id="column3" prefWidth="75.0" text="C2" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
       <Separator prefWidth="200.0" />
       <HBox alignment="CENTER_LEFT" spacing="29.0">
          <children>
@@ -114,10 +101,10 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <ScrollPane>
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
+      <ScrollPane prefHeight="180.0">
+         <content>
+            <Text fx:id="txtOutput" strokeType="OUTSIDE" strokeWidth="0.0" />
+         </content>
       </ScrollPane>
    </children>
    <padding>
