--- a/app/src/main/resources/GUI/principale.fxml
+++ b/app/src/main/resources/GUI/principale.fxml
@@ -6,10 +6,11 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -48,16 +49,25 @@
             </RadioButton>
          </children>
       </HBox>
-      <TableView fx:id="grigliaDB" prefHeight="250.0">
-        <columns>
-          <TableColumn fx:id="column1" prefWidth="75.0" text="C1" />
-          <TableColumn fx:id="column2" prefWidth="75.0" text="C2" />
-            <TableColumn fx:id="column3" prefWidth="75.0" text="C2" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
+      <ScrollPane hbarPolicy="NEVER">
+         <content>
+            <GridPane fx:id="grigliaDB" alignment="CENTER" prefHeight="101.0" prefWidth="567.0" vgap="20.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+              </rowConstraints>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
+               </padding>
+            </GridPane>
+         </content>
+      </ScrollPane>
       <Separator prefWidth="200.0" />
       <HBox alignment="CENTER_LEFT" spacing="29.0">
          <children>
