--- a/app/src/main/resources/GUI/genera_db.fxml
+++ b/app/src/main/resources/GUI/genera_db.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="291.0" prefWidth="552.0" spacing="10.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="matibbajava.controller.GeneraDBController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="matibbajava.controller.GeneraDBController">
    <children>
       <HBox alignment="CENTER_LEFT">
          <children>
@@ -34,7 +34,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <Button fx:id="btnScegliCartella" mnemonicParsing="false" onAction="#scegliCartella" text="Scegli cartella">
+            <Button fx:id="btnInputDir" mnemonicParsing="false" onAction="#scegliCartellaInput" text="Scegli cartella">
                <font>
                   <Font size="14.0" />
                </font>
@@ -48,7 +48,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label fx:id="labelDirScelta" text="*percorso cartella*">
+            <Label fx:id="lblInputDir" text="*percorso cartella*">
                <font>
                   <Font size="16.0" />
                </font>
@@ -65,6 +65,34 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <HBox alignment="CENTER_LEFT" spacing="95.0">
+         <children>
+            <Label text="Seleziona la cartella in cui salvare il database:">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnOutputDir" mnemonicParsing="false" onAction="#scegliCartellaOutput" text="Scegli cartella">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" spacing="15.0">
+         <children>
+            <Label text="Cartella selezionata: ">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblOutputDir" text="*percorso cartella*">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
       <HBox alignment="CENTER_LEFT" spacing="15.0">
          <children>
             <Label text="Inserisci il nome del database:">
@@ -83,13 +111,16 @@
       <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="0.0" />
       <HBox spacing="15.0">
          <children>
-            <Label text="Progresso:" />
+            <Label text="Progresso:">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
             <ProgressBar fx:id="pBar" prefWidth="200.0" progress="0.0" />
             <Label fx:id="pLabel" />
          </children>
       </HBox>
    </children>
    <padding>
-      <Insets bottom="10.0" left="20.0" top="15.0" />
+      <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
    </padding>
 </VBox>
